[BUGFIX] Use scss variable -dropdown-border-bottom on mobile

--- a/Resources/Public/Scss/Theme/_navbar.scss
+++ b/Resources/Public/Scss/Theme/_navbar.scss
@@ -42,6 +42,7 @@ $navbar-dropdown-border-top-color: $primary !default;
     border-color: $primary;
     box-shadow: none;
     padding: 0;
+    border-bottom: $navbar-dropdown-border-bottom;
 
     .navbar-start, .navbar-end {
       & > .navbar-item {
